# DataCleaner

./: Dockerfile  README.md  api.py  error_handlers.py  pyproject.toml
app/: models.py
app/cleaning/: name_clean.py  pipeline.py  title_clean.py
tests/: test_api.py  test_clean_pipe.py  test_models.py  test_name_clean.py  test_title_clean.py
