[project]
name = "datacleaner"
version = "0.1.0"
description = "A production-ready Python application for cleaning Titanic dataset using FastAPI."
authors = [
    {name = "dengke-li",email = "linuslukia@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.123.0,<0.124.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pytest (>=9.0.1,<10.0.0)",
]

[dependency-groups]
dev = [
    "fastapi (>=0.123.0,<0.124.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pytest (>=8.0.1,<10.0.0)",
    "coverage (>=7.12.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
